--- a/css/shared.css
+++ b/css/shared.css
@@ -18,6 +18,8 @@ header {
   padding: 15px 60px;
   position: absolute;
   width: 100%;
+  top: 0;
+  left: 0;
   box-sizing: border-box;
 }
 
@@ -48,7 +50,28 @@ header a {
   border-radius: 6px;
 }
 
-header a:hover {
+header nav a:hover {
   color: rgb(77, 77, 77);
   background-color: rgb(255, 251, 0);
+}
+
+footer {
+  background: linear-gradient(70deg, rgb(24, 24, 24), rgb(25, 29, 29));
+  padding: 36px 0;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+}
+
+footer li {
+  width: 80px;
+  height: 80px;
+  margin: 0 50px;
+}
+
+footer img {
+  width: 100%;
+  height: 100%;
 }
